[package]
name = "rhd"
version = "0.1.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
futures = "0.3.4"
futures-timer = "3.0"
codec = { package = "parity-scale-codec", version = "1.3.1" }

sp-inherents = { path = "../substrate/primitives/inherents" }
sp-core = { path = "../substrate/primitives/core" }
sp-blockchain = { path = "../substrate/primitives/blockchain" }
sp-io = { path = "../substrate/primitives/io" }
sp-version = { path = "../substrate/primitives/version" }
sp-api = { path = "../substrate/primitives/api" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-timestamp = { path = "../substrate/primitives/timestamp" }
sp-application-crypto = { path = "../substrate/primitives/application-crypto" }
sp-block-builder = { path = "../substrate/primitives/block-builder" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
sc-network = { path = "../substrate/client/network" }
sc-network-gossip = { path = "../substrate/client/network-gossip" }
sc-keystore = { path = "../substrate/client/keystore" }
sc-client-api = { path = "../substrate/client/api" }
sc-block-builder = { path = "../substrate/client/block-builder" }
sc-consensus-bftml = { path = "../substrate/client/consensus/bftml" }

